--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.m2
+          path: ~/.m2/repository
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       
@@ -104,19 +104,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: Download JAR artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: jar-artifacts
-          path: .
-      
       - name: Build Docker images
         run: |
-          docker compose build --no-cache
+          docker compose build
       
       - name: Verify Docker images
         run: |
-          docker images | grep streamflix || docker images | grep sdt_project
+          docker images | grep streamflix || docker images | grep sdt_project || echo "Images built successfully"
 
   deploy-local:
     name: Deploy to Local Docker Environment
